--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -87,6 +87,26 @@
                                 </svg>
                             </div>
                             <div class="style-depth-category-wrapper">
+                            <div class="depth-category-group">
+                                    <div class="depth-category">
+                                        <div class="depth-category-icon">
+                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
+                                        </div>
+                                        <div class="depth-category-text">전체</div>
+                                    </div>
+                                    <div class="depth-category">
+                                        <div class="depth-category-icon">
+                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
+                                        </div>
+                                        <div class="depth-category-text">보드게임</div>
+                                    </div>
+                                    <div class="depth-category">
+                                        <div class="depth-category-icon">
+                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
+                                        </div>
+                                        <div class="depth-category-text">디지털게임</div>
+                                    </div>
+                                </div>
                                 <div class="depth-category-group">
                                     <div class="depth-category">
                                         <div class="depth-category-icon">
@@ -98,27 +118,36 @@
                                         <div class="depth-category-icon">
                                             <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
                                         </div>
-                                        <div class="depth-category-text">보건</div>
+                                        <div class="depth-category-text">보드게임</div>
                                     </div>
                                     <div class="depth-category">
                                         <div class="depth-category-icon">
                                             <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
                                         </div>
-                                        <div class="depth-category-text">의료</div>
-                                    </div>
-                                    <div class="depth-category">
-                                        <div class="depth-category-icon">
-                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
-                                        </div>
-                                        <div class="depth-category-text">농어촌봉사</div>
-                                    </div>
-                                    <div class="depth-category">
-                                        <div class="depth-category-icon">
-                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
-                                        </div>
-                                        <div class="depth-category-text">멘토링</div>
+                                        <div class="depth-category-text">디지털게임</div>
                                     </div>
                                 </div>
+                                <div class="depth-category-group">
+                                    <div class="depth-category">
+                                        <div class="depth-category-icon">
+                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
+                                        </div>
+                                        <div class="depth-category-text">전체</div>
+                                    </div>
+                                    <div class="depth-category">
+                                        <div class="depth-category-icon">
+                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
+                                        </div>
+                                        <div class="depth-category-text">보드게임</div>
+                                    </div>
+                                    <div class="depth-category">
+                                        <div class="depth-category-icon">
+                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
+                                        </div>
+                                        <div class="depth-category-text">디지털게임</div>
+                                    </div>
+                                </div>
+                                
                                 <div class="depth-category-group"></div>
                                 <div class="depth-category-group"></div>
                                 <div class="depth-category-group"></div>
@@ -227,21 +256,47 @@
                                         </div>
                                         <div class="depth-category-text">디지털게임</div>
                                     </div>
+                                </div>
+                                <div class="depth-category-group">
                                     <div class="depth-category">
                                         <div class="depth-category-icon">
                                             <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
                                         </div>
-                                        <div class="depth-category-text">웹툰만화</div>
+                                        <div class="depth-category-text">전체</div>
                                     </div>
                                     <div class="depth-category">
                                         <div class="depth-category-icon">
                                             <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
                                         </div>
-                                        <div class="depth-category-text">웹툰리소스</div>
+                                        <div class="depth-category-text">보드게임</div>
+                                    </div>
+                                    <div class="depth-category">
+                                        <div class="depth-category-icon">
+                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
+                                        </div>
+                                        <div class="depth-category-text">디지털게임</div>
                                     </div>
                                 </div>
-                                <div class="depth-category-group"></div>
-                                <div class="depth-category-group"></div>
+                                <div class="depth-category-group">
+                                    <div class="depth-category">
+                                        <div class="depth-category-icon">
+                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
+                                        </div>
+                                        <div class="depth-category-text">전체</div>
+                                    </div>
+                                    <div class="depth-category">
+                                        <div class="depth-category-icon">
+                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
+                                        </div>
+                                        <div class="depth-category-text">보드게임</div>
+                                    </div>
+                                    <div class="depth-category">
+                                        <div class="depth-category-icon">
+                                            <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
+                                        </div>
+                                        <div class="depth-category-text">디지털게임</div>
+                                    </div>
+                                </div>
                                 <div class="depth-category-group"></div>
                                 <div class="depth-category-group"></div>
                             </div>
