--- a/src/main/resources/templates/customerCenter/notice-detail.html
+++ b/src/main/resources/templates/customerCenter/notice-detail.html
@@ -33,10 +33,10 @@
             <div class="notice-detail-wrapper">
                 <header>
                     <span class="group">공지사항</span>
-                    <h3>설 연휴 고객센터 및 공개검토 휴무 안내</h3>
-                    <span class="date">2019-02-01 05:55:37</span>
+                    <h3 th:text="${notice.noticeTitle}">설 연휴 고객센터 및 공개검토 휴무 안내</h3>
+                    <span class="date" th:text="${#temporals.format(notice.createdDate, 'yyyy-MM-dd hh:mm:ss')}">2019-02-01 05:55:37</span>
                 </header>
-                <div class="notice-detail-content">
+                <div class="notice-detail-content" th:text="${notice.noticeContent}">
                     <p class="">안녕하세요. 텀블벅 커뮤니티팀입니다.</p>
                     <p class="">&nbsp;</p>
                     <p class="">이용에 불편을 드려 죄송합니다.</p>
@@ -53,12 +53,14 @@
                 <li>
                     <b>이전글</b>
                     <button type="button" value="">
-                        [서비스 개편] Premium 요금제 혜택 추가 및 요금제 심사 안내 (2023.4.12 시행)</button>
+                        [서비스 개편] Premium 요금제 혜택 추가 및 요금제 심사 안내 (2023.4.12 시행)
+                    </button>
                 </li>
                 <li>
                     <b>다음글</b>
                     <button type="button" value="">
-                        [텀블벅] 2023.4.10(월) KT 유/무선 인터넷 환경 이미지 로딩 지연 발생 안내 (해결 완료)</button>
+                        [텀블벅] 2023.4.10(월) KT 유/무선 인터넷 환경 이미지 로딩 지연 발생 안내 (해결 완료)
+                    </button>
                 </li>
             </ul>
         </div>
@@ -66,7 +68,7 @@
 
     
         <div class="notice-detail-btn-wrap">
-            <button class="notice-detail-btn">목록으로 돌아가기</button>
+            <button class="notice-detail-btn" onclick="javascript:location.href='/inquiry/notice'">목록으로 돌아가기</button>
         </div>
 
     <!-- footer -->
