--- a/src/main/resources/templates/customerCenter/notice.html
+++ b/src/main/resources/templates/customerCenter/notice.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="/css/main/footer.css">
     <link rel="stylesheet" href="/css/customerCenter/notice.css">
     <link rel="stylesheet" href="/css/font/font.css">
-
 </head>
 <body>
     <!-- 헤더  -->
@@ -30,123 +29,133 @@
                 <div class="notice-list-container list-hei wid list-con notice-title">
                     <div class="notice-list-wrapper">
                         <ul class="list-ul">
-                            <li class="list-li">
-                                <a href="#">
-                                    <span class="title-wrap">
-                                        <span class="group">공지사항</span>
-                                        <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
-                                        <span class="list-date">2023-04-13</span>
-                                    </span>
-                                    <!-- <div class="list-img">
-                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div> -->
-                                </a>
-                            </li>
-                            <li class="list-li">
-                                <a href="#">
-                                    <span class="title-wrap">
-                                        <span class="group">공지사항</span>
-                                        <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
-                                        <span class="list-date">2023-04-13</span>
-                                    </span>
-                                    <!-- <div class="list-img">
-                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div> -->
-                                </a>
-                            </li>
-                            <li class="list-li">
-                                <a href="#">
-                                    <span class="title-wrap">
-                                        <span class="group">공지사항</span>
-                                        <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
-                                        <span class="list-date">2023-04-13</span>
-                                    </span>
-                                    <!-- <div class="list-img">
-                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div> -->
-                                </a>
-                            </li>
-                            <li class="list-li">
-                                <a href="#">
-                                    <span class="title-wrap">
-                                        <span class="group">공지사항</span>
-                                        <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
-                                        <span class="list-date">2023-04-13</span>
-                                    </span>
-                                    <!-- <div class="list-img">
-                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div> -->
-                                </a>
-                            </li>
-                            <li class="list-li">
-                                <a href="#">
-                                    <span class="title-wrap">
-                                        <span class="group">공지사항</span>
-                                        <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
-                                        <span class="list-date">2023-04-13</span>
-                                    </span>
-                                    <!-- <div class="list-img">
-                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div> -->
-                                </a>
-                            </li>
-                            <li class="list-li">
-                                <a href="#">
-                                    <span class="title-wrap">
-                                        <span class="group">공지사항</span>
-                                        <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
-                                        <span class="list-date">2023-04-13</span>
-                                    </span>
-                                    <!-- <div class="list-img">
-                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div> -->
-                                </a>
-                            </li>
-                            <li class="list-li">
-                                <a href="#">
-                                    <span class="title-wrap">
-                                        <span class="group">공지사항</span>
-                                        <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>
-                                        <span class="list-date">2023-04-13</span>
-                                    </span>
-                                    <!-- <div class="list-img">
-                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">
-                                    </div> -->
-                                </a>
-                            </li>
+<!--                            <li class="list-li">-->
+<!--                                <a href="#">-->
+<!--                                    <span class="title-wrap">-->
+<!--                                        <span class="group">공지사항</span>-->
+<!--                                        <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>-->
+<!--                                        <span class="list-date">2023-04-13</span>-->
+<!--                                    </span>-->
+<!--                                    &lt;!&ndash; <div class="list-img">-->
+<!--                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">-->
+<!--                                    </div> &ndash;&gt;-->
+<!--                                </a>-->
+<!--                            </li>-->
+<!--                            <li class="list-li">-->
+<!--                                <a href="#">-->
+<!--                                    <span class="title-wrap">-->
+<!--                                        <span class="group">공지사항</span>-->
+<!--                                        <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>-->
+<!--                                        <span class="list-date">2023-04-13</span>-->
+<!--                                    </span>-->
+<!--                                    &lt;!&ndash; <div class="list-img">-->
+<!--                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">-->
+<!--                                    </div> &ndash;&gt;-->
+<!--                                </a>-->
+<!--                            </li>-->
+<!--                            <li class="list-li">-->
+<!--                                <a href="#">-->
+<!--                                    <span class="title-wrap">-->
+<!--                                        <span class="group">공지사항</span>-->
+<!--                                        <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>-->
+<!--                                        <span class="list-date">2023-04-13</span>-->
+<!--                                    </span>-->
+<!--                                    &lt;!&ndash; <div class="list-img">-->
+<!--                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">-->
+<!--                                    </div> &ndash;&gt;-->
+<!--                                </a>-->
+<!--                            </li>-->
+<!--                            <li class="list-li">-->
+<!--                                <a href="#">-->
+<!--                                    <span class="title-wrap">-->
+<!--                                        <span class="group">공지사항</span>-->
+<!--                                        <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>-->
+<!--                                        <span class="list-date">2023-04-13</span>-->
+<!--                                    </span>-->
+<!--                                    &lt;!&ndash; <div class="list-img">-->
+<!--                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">-->
+<!--                                    </div> &ndash;&gt;-->
+<!--                                </a>-->
+<!--                            </li>-->
+<!--                            <li class="list-li">-->
+<!--                                <a href="#">-->
+<!--                                    <span class="title-wrap">-->
+<!--                                        <span class="group">공지사항</span>-->
+<!--                                        <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>-->
+<!--                                        <span class="list-date">2023-04-13</span>-->
+<!--                                    </span>-->
+<!--                                    &lt;!&ndash; <div class="list-img">-->
+<!--                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">-->
+<!--                                    </div> &ndash;&gt;-->
+<!--                                </a>-->
+<!--                            </li>-->
+<!--                            <li class="list-li">-->
+<!--                                <a href="#">-->
+<!--                                    <span class="title-wrap">-->
+<!--                                        <span class="group">공지사항</span>-->
+<!--                                        <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>-->
+<!--                                        <span class="list-date">2023-04-13</span>-->
+<!--                                    </span>-->
+<!--                                    &lt;!&ndash; <div class="list-img">-->
+<!--                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">-->
+<!--                                    </div> &ndash;&gt;-->
+<!--                                </a>-->
+<!--                            </li>-->
+<!--                            <li class="list-li">-->
+<!--                                <a href="#">-->
+<!--                                    <span class="title-wrap">-->
+<!--                                        <span class="group">공지사항</span>-->
+<!--                                        <span class="title">[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, &lt;그사람들의일&gt; 멤버를 모집합니다. </span>-->
+<!--                                        <span class="list-date">2023-04-13</span>-->
+<!--                                    </span>-->
+<!--                                    &lt;!&ndash; <div class="list-img">-->
+<!--                                        <img src="/static/image/notice/rag_doll_tumbnail.jpg" alt="[텀블벅] 마감이 필요한 프리랜서 및 창작자를 위한 모임, <그사람들의일> 멤버를 모집합니다.">-->
+<!--                                    </div> &ndash;&gt;-->
+<!--                                </a>-->
+<!--                            </li>-->
                         </ul>
                     </div>
                 </div>
                     <!-- 페이징 -->
                     <div class="paging-wrapper">
                         <ul class="paging-wrap">
-                            <li class="paging-prev-wrap" title="이전 페이지">
-                                <div class="prev">
-                                    <svg viewBox="0 0 48 48">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M32.8912 45.3014L12 23.913L32.8912 2.52471C33.5866 1.8251 34.7804 1.8251 35.4777 2.52471C36.1741 3.22333 36.1741 4.42368 35.4777 5.22224L17.1731 23.913L35.4777 42.7018C36.1741 43.4024 36.1741 44.6018 35.4777 45.4013C35.0788 45.8011 34.6819 46 34.1845 46C33.7855 45.9011 33.2881 45.7002 32.8912 45.3014Z"></path>
-                                    </svg>
-                                </div>
+                            <li th:if="${pageDTO.prev}" class="paging-prev-wrap" title="이전 페이지">
+                                <a th:href="@{/inquiry/notice} + '?page=' + ${pageDTO.startPage - 1}">
+                                    <div class="prev">
+                                        <svg viewBox="0 0 48 48">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M32.8912 45.3014L12 23.913L32.8912 2.52471C33.5866 1.8251 34.7804 1.8251 35.4777 2.52471C36.1741 3.22333 36.1741 4.42368 35.4777 5.22224L17.1731 23.913L35.4777 42.7018C36.1741 43.4024 36.1741 44.6018 35.4777 45.4013C35.0788 45.8011 34.6819 46 34.1845 46C33.7855 45.9011 33.2881 45.7002 32.8912 45.3014Z"></path>
+                                        </svg>
+                                    </div>
+                                </a>
                             </li>
-                            <li title="1" class="paging-item" tabindex="0">
-                                <a rel="nofollow">1</a>
-                            </li>
-                            <li title="2" class="paging-item" tabindex="0">
-                                <a rel="nofollow">2</a>
-                            </li>
-                            <li title="3" class="paging-item" tabindex="0">
-                                <a rel="nofollow">3</a>
-                            </li>
-                            <li title="4" class="paging-item" tabindex="0">
-                                <a rel="nofollow">4</a>
-                            </li>
-                            <li title="5" class="paging-item" tabindex="0">
-                                <a rel="nofollow">5</a>
-                            </li>
+                            <th:block th:each="page:${#numbers.sequence(pageDTO.startPage, pageDTO.endPage)}">
+                                <li th:if="${pageDTO.pageNum == page}" title="1" class="paging-item-selected" tabindex="0">
+                                    <a rel="nofollow" th:text="${page}">1</a>
+                                </li>
+                                <li th:if="${pageDTO.pageNum != page}" title="2" class="paging-item" tabindex="0">
+                                    <a th:href="@{/inquiry/notice} + '?page=' + ${page}" rel="nofollow" th:text="${page}">2</a>
+                                </li>
+                            </th:block>
 
-                            <li title="다음 페이지" tabindex="0" class="paging-next" aria-disabled="false">
-                                <div  class="next">
-                                    <svg viewBox="0 0 48 48">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M13.9071 46C13.4118 46 12.9164 45.8001 12.6192 45.4003C11.9257 44.7007 11.9257 43.5014 12.6192 42.7019L30.8493 24.0125L12.5201 5.22317C11.8266 4.52357 11.8266 3.32425 12.5201 2.5247C13.2136 1.8251 14.3034 1.8251 15.096 2.5247L36 24.0125L15.195 45.4003C14.7988 45.8001 14.3034 46 13.9071 46Z"></path></svg></div>
+
+<!--                            <li title="3" class="paging-item" tabindex="0">-->
+<!--                                <a rel="nofollow">3</a>-->
+<!--                            </li>-->
+<!--                            <li title="4" class="paging-item" tabindex="0">-->
+<!--                                <a rel="nofollow">4</a>-->
+<!--                            </li>-->
+<!--                            <li title="5" class="paging-item" tabindex="0">-->
+<!--                                <a rel="nofollow">5</a>-->
+<!--                            </li>-->
+
+                            <li th:if="${pageDTO.next}" title="다음 페이지" tabindex="0" class="paging-next" aria-disabled="false">
+                                <a th:href="@{/inquiry/notice} + '?page=' + ${pageDTO.endPage + 1}">
+                                    <div class="next">
+                                        <svg viewBox="0 0 48 48">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M13.9071 46C13.4118 46 12.9164 45.8001 12.6192 45.4003C11.9257 44.7007 11.9257 43.5014 12.6192 42.7019L30.8493 24.0125L12.5201 5.22317C11.8266 4.52357 11.8266 3.32425 12.5201 2.5247C13.2136 1.8251 14.3034 1.8251 15.096 2.5247L36 24.0125L15.195 45.4003C14.7988 45.8001 14.3034 46 13.9071 46Z"></path>
+                                        </svg>
+                                    </div>
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -176,5 +185,9 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script th:inline="javascript">
+    let notices = [[${noticeDTOS}]];
+</script>
 <script src="/js/main/header.js"></script>
+<script src="/js/customerCenter/notice.js"></script>
 </html>
