--- a/src/main/resources/templates/support/support-write.html
+++ b/src/main/resources/templates/support/support-write.html
@@ -34,6 +34,8 @@
                 </div>
                 
                 <div class="qna-write-content">
+
+
                     <form  method="post" enctype="multipart/form-data">
                         <div class="qna-original-input-layout">
                             <div class="qna-write-content-title-div">
@@ -79,6 +81,7 @@
                                                     </span>
                                                 </span>
                                             </div> -->
+
                                         <!-- 썸머노트 API -->
                                         <div class="notice__content" >
                                             <textarea id="summernote" name="editordata"></textarea>
@@ -129,7 +132,7 @@
                         </div>
                         
                         <div class="submit-button-layout">
-                            <input type="button" class="submit-button" value="등록"></input>
+                            <input type="submit" class="submit-button" value="등록">
                         </div>
                     </form>
                 </div>
@@ -144,70 +147,84 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/main/header.js"></script>
-<!--&lt;!&ndash; 웹에디터 API &ndash;&gt;-->
-<!--<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>-->
-<!--<script>-->
-<!--  console.log('썸머노트');-->
-<!--  $('#summernote').summernote({-->
-<!--    placeholder: '내용을 입력하세요',-->
-<!--    tabsize: 2,-->
-<!--    height: 300,-->
-<!--    width: '100%',-->
-<!--    toolbar: [-->
-<!--      ['style', ['style']],-->
-<!--      ['font', ['bold', 'underline', 'clear']],-->
-<!--      ['color', ['color']],-->
-<!--      ['para', ['ul', 'ol', 'paragraph']],-->
-<!--      ['table', ['table']],-->
-<!--      ['insert', ['link', 'picture', 'video']],-->
-<!--    ],-->
-<!--  });-->
-<!--</script>-->
+<!-- 웹에디터 API -->
 <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
 <script>
-    $(document).ready(function() {
-        $('#summernote').summernote({
-            placeholder: '내용을 입력하세요',
-            tabsize: 2,
-            height: 300,
-            width: '100%',
-            toolbar: [
-                ['style', ['style']],
-                ['font', ['bold', 'underline', 'clear']],
-                ['color', ['color']],
-                ['para', ['ul', 'ol', 'paragraph']],
-                ['table', ['table']],
-                ['insert', ['link', 'picture', 'video']],
-            ],
-            callbacks: {
-                onImageUpload: function(files) {
-                    // 이미지 업로드를 처리하는 부분
-                    uploadImage(files[0]);
-                }
-            }
-        });
+  $('#summernote').summernote({
+      placeholder: '내용을 입력하세요',
+      tabsize: 2,
+      height: 300,
+      width: '100%',
+      toolbar: [
+          ['style', ['style']],
+          ['font', ['bold', 'underline', 'clear']],
+          ['color', ['color']],
+          ['para', ['ul', 'ol', 'paragraph']],
+          ['table', ['table']],
+          ['insert', ['link', 'picture', 'video']],
+      ],
 
-        // 이미지 업로드 함수
-        function uploadImage(file) {
-            var formData = new FormData();
-            formData.append('file', file);
+      callbacks: {
+          onImageUpload: function(files) {
+              // 이미지 업로드를 처리하는 부분
+              uploadImage(files[0]);
+          }
+          // ,
+          // onMediaDelete: function(target) {
+          //     // 이미지 삭제 시 처리하는 부분
+          //     deleteImage(target[0].src);
+          // }
+      }
+  });
+  // 이미지 업로드 함수
+  function uploadImage(file) {
+      var formData = new FormData();
+      formData.append('file', file);
 
-            $.ajax({
-                url: '/api/summernote/image',
-                method: 'POST',
-                data: formData,
-                contentType: false,
-                processData: false,
-                success: function(url) {
-                    // 업로드된 이미지 URL을 에디터에 삽입
-                    $('#summernote').summernote('insertImage', url);
-                },
-                error: function() {
-                    // 업로드 실패 시 처리
-                    alert('이미지 업로드에 실패했습니다.');
-                }
-            });
-        }
-    });
+      $.ajax({
+          url: '/api/summernote/image',
+          method: "POST",
+          data: formData,
+          contentType: false,
+          processData: false,
+          success: function(url) {
+              // 업로드된 이미지 URL을 에디터에 삽입
+              var image = $('<img>').attr('src', url);
+              $('#summernote').summernote('insertNode', image[0]);
+              $('#summernote').summernote('insertImage', url);
+          },
+          error: function() {
+              // 업로드 실패 시 처리
+              alert('이미지 업로드에 실패했습니다.');
+          }
+      });
+  }
+
+
+  // // 이미지 삭제 함수
+  // function deleteImage(src) {
+  //     // 이미지 삭제 API 호출 및 처리
+  //     $.ajax({
+  //         url: '/api/summernote/image/delete',
+  //         method: 'POST',
+  //         data: { src: src },
+  //         success: function(response) {
+  //             // 이미지 삭제 성공 시 처리
+  //             console.log('이미지 삭제 성공');
+  //         },
+  //         error: function() {
+  //             // 이미지 삭제 실패 시 처리
+  //             console.log('이미지 삭제 실패');
+  //         }
+  //     });
+  // }
+
+  // 등록 버튼 클릭 시 폼 제출
+  // $('.submit-button').on('click', function () {
+  //     $('form').submit();
+  // });
+
 </script>
+
+
 </html>
