후원 요청 목록

--- a/src/main/resources/templates/mypage/withdraw-check.html
+++ b/src/main/resources/templates/mypage/withdraw-check.html
@@ -70,7 +70,7 @@
                                     탈퇴 유의사항을 확인했습니다.
                                 </div>
                             </div>
-                            <button class="next-button">다음</button>
+                            <button type="button" class="next-button">다음</button>
                         </div>
                     </div>
                 </div>
@@ -117,8 +117,7 @@
             $('.modal-wrap').show();
             return;
         }
-
-
+        location.href= "/mypage/withdraw-login"
     });
 
     // 모달에 확인 버튼 누르면 모달 끄기
